fix button rounded edges, comments jbuilder were not including id and so receive_comment action was not showing the comment

--- a/app/assets/stylesheets/comment/comment.css
+++ b/app/assets/stylesheets/comment/comment.css
@@ -50,7 +50,7 @@ textarea {
 }
 
 .comment-textarea {
-  height: 150px;
+  height: 80px;
   width: 400px;
 }
 
